tests/snapshots/integration__integration_tests__list__readme_example_list_full.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--full"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "115"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m       [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m                [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge
@ [1mfeature-api[0m  [36m+[39m   [2m↕[22m[2m⇡[22m     [32m+54[0m   [31m-5[0m   [32m↑4[0m  [2m[31m↓1[0m  [32m+234[0m  [31m-24[0m  [1m./repo.feature-api[0m   [32m⇡3[0m      [2m[34m●[0m   [2m28d38c20[0m  [2m30m
^ main             [2m^[22m[2m⇅[22m                                   ./repo               [32m⇡1[0m  [2m[31m⇣1[0m  [32m●[0m   [2m2e6b7a8f[0m  [2m4d
+ fix-auth         [2m↕[22m[2m|[22m                [32m↑2[0m  [2m[31m↓1[0m   [32m+25[0m  [31m-11[0m  ./repo.fix-auth        [2m|[0m     [32m●[0m   [2m1d697d5b[0m  [2m5h

⚪ [2mShowing 3 worktrees; 1 with changes, 2 ahead; 1 column hidden
